changement photo et skills part

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                     <div class="icon">
                                         <i class="fab fa-html5"></i>
                                     </div>
-                                    <div class="text">HTML</div>
+                                    <div class="text">HTML5</div>
                                 </div>
                             </li>
                             <li>
@@ -74,7 +74,7 @@
                                     <div class="icon">
                                         <i class="fab fa-css3-alt"></i>
                                     </div>
-                                    <div class="text">CSS</div>
+                                    <div class="text">CSS3</div>
                                 </div>
                             </li>
                             <li>
@@ -93,10 +93,58 @@
                                     <div class="text">Python</div>
                                 </div>
                             </li>
+                            <li>
+                                <div class="li_wrap">
+                                    <div class="icon">
+                                        <i class="fas fa-file-invoice-dollar"></i>
+                                    </div>
+                                    <div class="text">SAGE, CEGID, ERP, CIEL</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="li_wrap">
+                                    <div class="icon">
+                                        <i class="fab fa-creative-commons-share"></i>
+                                    </div>
+                                    <div class="text">Codifier un titre</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="li_wrap">
+                                    <div class="icon">
+                                        <i class="fas fa-table"></i>
+                                    </div>
+                                    <div class="text">Analyse des données comptable</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="li_wrap">
+                                    <div class="icon">
+                                        <i class="fas fa-file-code"></i>
+                                    </div>
+                                    <div class="text">VBA</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="li_wrap">
+                                    <div class="icon">
+                                        <i class="fas fa-laptop-code"></i>
+                                    </div>
+                                    <div class="text">Outil informatique</div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="li_wrap">
+                                    <div class="icon">
+                                        <i class="fas fa-file-excel"></i>
+                                    </div>
+                                    <div class="text">Pack office</div>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </div>
-                <div class="hobbies_wrap pb">
+                                <div class="hobbies_wrap pb">
                     <div class="title">
                         Loisirs
                     </div>
