--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div class="right_inner">
                     <div class="exp">
                         <div class="title">
-                            Experience
+                            Expériences
                         </div>
                         <div class="exp_wrap">
                             <ul>
@@ -386,7 +386,7 @@
                     </div>
                     <div class="education">
                         <div class="title">
-                            Formation
+                            Formations
                         </div>
                         <div class="education_wrap">
                             <ul>
