--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                     <div class="icon">
                                         <i class="fab fa-weebly"></i>
                                     </div>
-                                    <div class="text"> <a href="www.mywebsiteurl.com">www.mywebsiteurl.com</a></div>
+                                    <div class="text"> <a href="https://karim-trabelsi.netlify.app/">www.mywebsiteurl.com</a></div>
                                 </div>
                             </li>
                             <li>
